# FerrousOS

./: .gitignore  .travis.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
bootloader/x86_64/: bootsector.s  disk.s  gdt.s  kernel_entry.s  print.s  switch_pm.s
kernel/: Cargo.toml
kernel/src/: lib.rs  macros.rs  main.rs  panic.rs  prelude.rs  uart.rs  vga.rs
kernel/src/hid/: mod.rs  pckbd.rs  queue.rs
kernel/src/init/: gdt.rs  idt.rs  mod.rs  pic.rs  serial.rs  vga.rs
kernel/src/mem/: mod.rs
kernel/src/uart/: m16550.rs  mod.rs
kernel/src/vga/: character.rs  mod.rs
